--- a/ziehharmonika.css
+++ b/ziehharmonika.css
@@ -28,7 +28,7 @@
 }
 .ziehharmonika > div {
 	display: none;
-	background: #fff;
+	background: #ececec;
 	border-radius: 4px;
 	border: 1px solid #cdcdcd;
 	text-align: left;
