--- a/ziehharmonika.css
+++ b/ziehharmonika.css
@@ -28,12 +28,6 @@
 }
 .ziehharmonika > div {
 	display: none;
-	background: #ececec;
-	border-radius: 4px;
-	border: 1px solid #cdcdcd;
-	text-align: left;
-	padding: 0px 5px;
-	margin-bottom: 9px;
 }
 .ziehharmonika .arrowDown {
 	width: 0;
@@ -64,4 +58,12 @@
 .ziehharmonika .collapseIcon.alignLeft {
 	right: initial;
 	left: 20px;
+}
+.canal-table {
+    background: #ececec;
+    border-radius: 4px;
+    border: 1px solid #cdcdcd;
+    text-align: left;
+    padding: 0px 5px;
+    margin-bottom: 9px;
 }
