--- a/ziehharmonika.css
+++ b/ziehharmonika.css
@@ -1,17 +1,18 @@
 /* @author Tim himself */
 
 .ziehharmonika h3 {
-	background: #272e35;
-	color: #fff;
-	text-align: left;
-	border-radius: 4px;
-	padding: 14px 12px;
-	cursor: pointer;
-	margin-top: 0;
-	margin-bottom: 9px;
-	padding-right: 40px;
-	transition: 0.25s all;
-	position: relative;
+    background: #ffffff;
+    color: #000;
+    text-align: left;
+    border-radius: 4px;
+    padding: 14px 12px;
+    cursor: pointer;
+    margin-top: 0;
+    margin-bottom: 9px;
+    padding-right: 40px;
+    transition: 0.25s all;
+    position: relative;
+    border: 1px solid #ccc;
 }
 .ziehharmonika h3.active {
 	margin-bottom: 21px;
