--- a/ziehharmonika.css
+++ b/ziehharmonika.css
@@ -61,9 +61,9 @@
 	left: 20px;
 }
 .canal-table {
-    background: #ececec;
+    background: #E8E8E8;
     border-radius: 4px;
-    border: 1px solid #cdcdcd;
+    border: 1px solid #D1D1D1;
     text-align: left;
     padding: 0px 5px;
     margin-bottom: 9px;
